[package]
name = "synth-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6", features = ["stable_graph"] }
dasp_slice = { version = "0.11.0", default-features = false, features = ["std"] }
dasp_signal = "0.11.0"
